--- a/ExpenseTracker.Api/appsettings.json
+++ b/ExpenseTracker.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ExpenseTrackerDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-NQ0KVEK\\SQLEXPRESS;Database=ExpenseTrackerDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
 }
